# CdCatXmlToHtml

./: CMakeLists.txt  CdCatReader.cpp  CdCatReader.h  CdCatTranslator.cpp  CdCatTranslator.h  HtmlWriter.cpp  HtmlWriter.h  IReader.h  ITranslator.cpp  ITranslator.h  Messenger.cpp  Messenger.h  README.md  README.txt  cd_catalog.xml  main.cpp  output-try.html  output_mockup.html
CdCatalogueToHtml/CdCatalogueToHtml/: CdCatalogueToHtml.vcxproj  IReader.cpp  IReader.h
