CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

project(CdCatXmlToHtml)
  set(CMAKE_INCLUDE_CURRENT_DIR ON)
file(GLOB HEADERS *.h)
file(GLOB SOURCES *.cpp)
set (MISC_FILES cd_catalog.xml output_mockup.html)
MESSAGE( STATUS "HEADERS: "  ${HEADERS} )
#set (QT_QMAKE_EXECUTABLE_FINDQT  CACHE PATH "")
 find_package(Qt5Xml REQUIRED)


ADD_DEFINITIONS(-DQT_NO_KEYWORDS)


# include ui headers
MESSAGE( STATUS "CMAKE_CURRENT_BUILD_DIR: " ${CMAKE_CURRENT_BUILD_DIR} )
MESSAGE( STATUS "Qt5Xml_LIBRARIES: "  ${Qt5Xml_LIBRARIES} )
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

add_executable ( ${PROJECT_NAME}  ${SOURCES} ${HEADERS} ${MISC_FILES} )
qt5_use_modules(${PROJECT_NAME} Xml)

#target_link_libraries ( ${PROJECT_NAME} ${Qt5Base_LIBRARIES} )